--- a/images.qrc
+++ b/images.qrc
@@ -13,5 +13,10 @@
         <file>images/desk.jpg</file>
         <file>images/chegbg.png</file>
         <file>images/New-WoodFloor-Style-Background-Promotion-1x1-5M-Photo-Background-3X5ft-Vinyl-Backdrop-Prop-Nice-Photo-Studio.jpg</file>
+        <file>images/candy.jpg</file>
+        <file>images/mocha.jpg</file>
+        <file>images/stwbetty.jpg</file>
+        <file>images/open.jpg</file>
+        <file>images/memu1.jpg</file>
     </qresource>
 </RCC>
