--- a/usrui/servercomment.ui
+++ b/usrui/servercomment.ui
@@ -14,7 +14,9 @@
    <string>点评服务生</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-image: url(:/images/true.jpg);</string>
+   <string notr="true">QDialog#Servercomment{
+background-image: url(:/images/true.jpg);
+}</string>
   </property>
   <widget class="QLabel" name="label_2">
    <property name="geometry">
@@ -40,6 +42,43 @@
      <width>89</width>
      <height>25</height>
     </rect>
+   </property>
+   <property name="palette">
+    <palette>
+     <active>
+      <colorrole role="Button">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>114</red>
+         <green>159</green>
+         <blue>207</blue>
+        </color>
+       </brush>
+      </colorrole>
+     </active>
+     <inactive>
+      <colorrole role="Button">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>114</red>
+         <green>159</green>
+         <blue>207</blue>
+        </color>
+       </brush>
+      </colorrole>
+     </inactive>
+     <disabled>
+      <colorrole role="Button">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>114</red>
+         <green>159</green>
+         <blue>207</blue>
+        </color>
+       </brush>
+      </colorrole>
+     </disabled>
+    </palette>
    </property>
    <property name="text">
     <string>提交</string>
@@ -70,6 +109,9 @@
      <height>17</height>
     </rect>
    </property>
+   <property name="styleSheet">
+    <string notr="true">font: 75 12pt &quot;文泉驿等宽微米黑&quot;;</string>
+   </property>
    <property name="text">
     <string>服务质量</string>
    </property>
@@ -82,6 +124,9 @@
      <width>67</width>
      <height>17</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 75 12pt &quot;文泉驿等宽微米黑&quot;;</string>
    </property>
    <property name="text">
     <string>服务效率</string>
@@ -141,6 +186,9 @@
      <width>121</width>
      <height>61</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 75 14pt &quot;文泉驿等宽微米黑&quot;;</string>
    </property>
    <property name="text">
     <string>为TA打分</string>
