--- a/beginui/login.ui
+++ b/beginui/login.ui
@@ -18,7 +18,7 @@
     <normaloff>:/images/background.jpg</normaloff>:/images/background.jpg</iconset>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-image: url(:/images/New-WoodFloor-Style-Background-Promotion-1x1-5M-Photo-Background-3X5ft-Vinyl-Backdrop-Prop-Nice-Photo-Studio.jpg);</string>
+   <string notr="true"/>
   </property>
   <widget class="QLabel" name="title">
    <property name="geometry">
@@ -42,6 +42,43 @@
      <height>25</height>
     </rect>
    </property>
+   <property name="palette">
+    <palette>
+     <active>
+      <colorrole role="Button">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>114</red>
+         <green>159</green>
+         <blue>207</blue>
+        </color>
+       </brush>
+      </colorrole>
+     </active>
+     <inactive>
+      <colorrole role="Button">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>114</red>
+         <green>159</green>
+         <blue>207</blue>
+        </color>
+       </brush>
+      </colorrole>
+     </inactive>
+     <disabled>
+      <colorrole role="Button">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>114</red>
+         <green>159</green>
+         <blue>207</blue>
+        </color>
+       </brush>
+      </colorrole>
+     </disabled>
+    </palette>
+   </property>
    <property name="styleSheet">
     <string notr="true">font: 14pt &quot;文泉驿微米黑&quot;;</string>
    </property>
@@ -58,9 +95,16 @@
      <height>23</height>
     </rect>
    </property>
+   <property name="palette">
+    <palette>
+     <active/>
+     <inactive/>
+     <disabled/>
+    </palette>
+   </property>
    <property name="styleSheet">
-    <string notr="true">
-font: 75 13pt &quot;Ume Gothic&quot;;</string>
+    <string notr="true">border-color: rgb(138, 226, 52);
+font: 75 italic 13pt &quot;方正小标宋_GBK&quot;;</string>
    </property>
    <property name="text">
     <string>账号:</string>
@@ -89,7 +133,8 @@ font: 75 13pt &quot;Ume Gothic&quot;;</string>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">font: 75 13pt &quot;Ume Gothic&quot;;</string>
+    <string notr="true">
+font: 75 italic 13pt &quot;方正小标宋_GBK&quot;;</string>
    </property>
    <property name="text">
     <string>密码:</string>
@@ -117,6 +162,43 @@ font: 75 13pt &quot;Ume Gothic&quot;;</string>
      <height>31</height>
     </rect>
    </property>
+   <property name="palette">
+    <palette>
+     <active>
+      <colorrole role="Button">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>114</red>
+         <green>159</green>
+         <blue>207</blue>
+        </color>
+       </brush>
+      </colorrole>
+     </active>
+     <inactive>
+      <colorrole role="Button">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>114</red>
+         <green>159</green>
+         <blue>207</blue>
+        </color>
+       </brush>
+      </colorrole>
+     </inactive>
+     <disabled>
+      <colorrole role="Button">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>114</red>
+         <green>159</green>
+         <blue>207</blue>
+        </color>
+       </brush>
+      </colorrole>
+     </disabled>
+    </palette>
+   </property>
    <property name="styleSheet">
     <string notr="true">font: 14pt &quot;文泉驿微米黑&quot;;</string>
    </property>
@@ -132,6 +214,43 @@ font: 75 13pt &quot;Ume Gothic&quot;;</string>
      <width>121</width>
      <height>31</height>
     </rect>
+   </property>
+   <property name="palette">
+    <palette>
+     <active>
+      <colorrole role="Button">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>114</red>
+         <green>159</green>
+         <blue>207</blue>
+        </color>
+       </brush>
+      </colorrole>
+     </active>
+     <inactive>
+      <colorrole role="Button">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>114</red>
+         <green>159</green>
+         <blue>207</blue>
+        </color>
+       </brush>
+      </colorrole>
+     </inactive>
+     <disabled>
+      <colorrole role="Button">
+       <brush brushstyle="SolidPattern">
+        <color alpha="255">
+         <red>114</red>
+         <green>159</green>
+         <blue>207</blue>
+        </color>
+       </brush>
+      </colorrole>
+     </disabled>
+    </palette>
    </property>
    <property name="styleSheet">
     <string notr="true">font: 14pt &quot;文泉驿微米黑&quot;;</string>
