--- a/usrui/foodplate.ui
+++ b/usrui/foodplate.ui
@@ -14,17 +14,33 @@
    <string>Dialog</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-image: url(:/images/userchoicebackground.png);
-</string>
+   <string notr="true">QDialog#Foodplate {
+	background-image: url(:/images/memu1.jpg);
+}</string>
   </property>
   <widget class="QTableView" name="orderview">
    <property name="geometry">
     <rect>
-     <x>0</x>
-     <y>10</y>
+     <x>10</x>
+     <y>-20</y>
      <width>411</width>
-     <height>481</height>
+     <height>431</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QTableView , QTableWidget{
+    selection-background-color:#44c767;
+ 
+background-color: rgb(114, 159, 207,80%);
+    border:1px solid #E0DDDC;/*边框为1像素，灰色*/
+    gridline-color:lightgray;/*这个是表格的格子线的颜色，为亮灰*/
+}
+QHeaderView::section{
+    background-color:white;/*背景色 白色*/
+    border:0px solid #E0DDDC;/*先把边框宽度设为0，即隐藏所有表头边框*/
+    border-bottom:1px solid #E0DDDC;/*然后只显示下边框，因为上边框和左右边框是整个Table的边框，都显示会有2px的边框宽度*/
+    height:20px;/*表头高度*/
+}</string>
    </property>
   </widget>
  </widget>
